# Chess-AI-React

./: BUILD_INSTRUCTIONS.md  CLEANUP_SUMMARY.md  README.md  SUMMARY.md  package-lock.json  package.json  setup-and-build.sh  vite.config.ts
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Engine_v2.cpp  Engine_v2.h  Engine_v2_incomplete_backup.cpp  MinimaxEngine.cpp  MinimaxEngine.h  MinimaxEngine.old.cpp  MinimaxEngineV2.cpp  MinimaxEngineV2.h  README.md  bridge.cpp  build.sh
public/: chess-engine.js  chess-engine.wasm  stockfish-worker.js
src/: GameSetup.css  GameSetup.tsx
src/game/: chessEngineWorker.ts  initialBoard.ts  moveValidation.ts  stockfishEngine.ts  types.ts  useChessGame.ts  wasmEngine.ts
